--- a/public/v/toppen-fjaderhjalmar/index.html
+++ b/public/v/toppen-fjaderhjalmar/index.html
@@ -40,6 +40,7 @@
              ffmpeg -i input.mp4 -c:v libvpx-vp9 -crf 33 -b:v 0 -c:a libopus -b:a 96k commentary.webm
              ffmpeg -i input.mp4 -c:v libx264 -crf 23 -preset slow -c:a aac -b:a 128k commentary.mp4 -->
             <!--<source src="commentary.webm" type="video/webm">-->
+            <source src="toppen-fjaderhjalmar.mp4" type="video/mp4" />
             <source
               src="https://pub-297728e859704112a190147db3fefac6.r2.dev/toppen-fjaderhjalmar-web.webm"
               type="video/webm"
